(fix) Title alignment

--- a/public/client/styles/styles.css
+++ b/public/client/styles/styles.css
@@ -17,7 +17,7 @@ button {
 
 }*/
 
-h2 {
+#title {
   text-align: right;
 }
 
